--- a/contact.html
+++ b/contact.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact </title>
+    <title>Contact - My Bootstrap Website</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2.6.4/dist/email.min.js"></script>
-    
-    
 </head>
 <body>
 
@@ -27,42 +26,34 @@
             </ul>
         </div>
     </nav>
-
-    <header class="hero text-center">
-        <div class="overlay"></div>
-        <div class="container position-relative">
-            <h2 class="display-4">Contact Us</h2>
-            <p class="lead">We'd love to hear from you!</p>
-        </div>
-    </header>
-
-    <div class="container my-5">
-        <form id="contact-form" onsubmit="sendEmail(event)">
-            <div class="C">
+    <div class="container mt-5">
+        <h2 class="text-center">Contact Us</h2>
+        <p class="text-center">We'd love to hear from you! Please fill out the form below:</p>
+        <form id="contact-form" class="bg-light p-4 rounded shadow">
+            <div class="mb-3">
                 <label for="name" class="form-label">Name</label>
-                <input type="text" class="form-control" id="name" required>
+                <input type="text" class="form-control" id="name" name="name" placeholder="Your Name" required>
             </div>
-            <div class="C">
-                <label for="email" class="form-label">Email Address</label>
-                <input type="email" class="form-control" id="email" required>
+            <div class="mb-3">
+                <label for="email" class="form-label">Email</label>
+                <input type="email" class="form-control" id="email" name="email" placeholder="jhon36@example.com" required>
             </div>
-            <div class="C">
+            <div class="mb-3">
                 <label for="subject" class="form-label">Subject</label>
-                <input type="text" class="form-control" id="subject" required>
+                <input type="text" class="form-control" id="subject" name="subject" placeholder="Subject " required>
             </div>
-            <div class="C">
+            <div class="mb-3">
                 <label for="message" class="form-label">Message</label>
-                <textarea class="form-control" id="message" rows="4" required></textarea>
+                <textarea class="form-control" id="message" name="message" rows="4" placeholder="Message Here" required></textarea>
             </div>
             <button type="submit" class="btn btn-primary">Send Message</button>
         </form>
     </div>
 
-    <footer class="footer-bg text-center">
+    <footer class="footer-bg text-center mt-5 py-3">
         <p>&copy; 2024 MyWebsite. All rights reserved.</p>
     </footer>
 
     <script src="js.js"></script>
-   
 </body>
 </html>
