--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage - My Bootstrap Website</title>
+    <title>Homepage </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -40,7 +40,7 @@
 
    
     <footer class="footer-bg text-center">
-        <p>&copy; 2024 MyWebsite. All rights reserved.</p>
+        <p> HALO</p>
     </footer>
 
     
