--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
     </div>
 
     <footer class="footer-bg text-center mt-5 py-3">
-        <p>&copy; 2024 MyWebsite. All rights reserved.</p>
+        <p>Halo</p>
     </footer>
 
     <script src="js.js"></script>
