--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
     </nav>
     <div class="container mt-5">
         <h2 class="text-center">Contact Us</h2>
-        <p class="text-center">We'd love to hear from you! Please fill out the form below:</p>
+        <p class="text-center">Please fill out the form below:</p>
         <form id="contact-form" class="bg-light p-4 rounded shadow">
             <div class="mb-3">
                 <label for="name" class="form-label">Name</label>
