--- a/index.html
+++ b/index.html
@@ -37,4 +37,10 @@
             </div>
         </div>
     </header>
+    <footer class="bg-primary text-white text-center py-4">
+        <p>&copy; 2024 MyWebsite. All Rights Reserved.</p>
+        
+    </footer>
+</body> 
+</html>
 
