--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
         </div>
     </header>
     <footer class="bg-primary text-white text-center py-4">
-        <p>&copy; 2024 MyWebsite. All Rights Reserved.</p>
-        
+        <p>Halo</p>  
     </footer>
 </body> 
 </html>
