--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
         </div>
     </header>
     <footer class="bg-primary text-white text-center py-4">
-        <p>Halo</p>  
+        <p>Halo<
+            /p>  
     </footer>
 </body> 
 </html>
