--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
     </div>
 
     <footer class="footer-bg text-center mt-5 py-3">
-        <p>Halo</p>
+        <p>Copy Rights Reserved @ 10/24/24 Jhon Lloyd Soco</p>
     </footer>
 
     <script src="js.js"></script>
