--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
     </header>
     <footer class="bg-primary text-white text-center py-4">
-        <p>Copy Rights Reserved @ 10/24/24 Jhon Lloyd Soco/p>  
+        <p>Copy Rights Reserved @ 10/24/24 Jhon Lloyd Soco</p>  
     </footer>
 </body> 
 </html>
