--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,9 @@
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="#">MyWebsite</a>
+        <a class="navbar-brand" href="#">
+            <img src="Logo.png.png" alt="Avatar Logo" style="width:40px;" class="rounded-pill"> 
+          </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
