--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
             </div>
         </div>
     </header>
+    <section id="about" class="py-5 bg-light">
+        <div class="container">
+            <h2 class="text-center">About Us</h2>
+            <p class="text-center">We are dedicated to providing the best experience for our users.</p>
+        </div>
+    </section>
+    
+
+
     <footer class="bg-primary text-white text-center py-4">
         <p>Copy Rights Reserved @ 10/24/24 Jhon Lloyd Soco</p>  
     </footer>
