--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="card">
-                        <a href="https://kyoon12.github.io/Midterm-Exam/">
-                            <img src="pic.jpg.jpg" class="card-img-top" alt="Project 1">
+                        <a href="https://kyoon12.github.io/Weather/">
+                            <img src="1" class="card-img-top" alt="Project 1">
                         </a>
                         <div class="card-body">
                             <h5 class="card-title">E-commerce</h5>
@@ -64,7 +64,7 @@
                 <div class="col-md-4">
                     <div class="card">
                         <a href="https://kyoon12.github.io/Midterm-Exam/">
-                            <img src="jpg" class="card-img-top" alt="Project 2">
+                            <img src="pic.jpg.jpg" class="card-img-top" alt="Project 2">
                         </a>
                         <div class="card-body">
                             <h5 class="card-title">Project Title 2</h5>
